tests/snapshots/bundled_review_files__a-deep-directory.snap
---
source: tests/bundled_review_files.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=false
  text "a-very-long-directory-name-indeed/" muted bold ellipsize
  line
    text "    " bold selected
    text "M" bold selected
    text " x.rs  " bold selected
    text "+9" bold selected
    text " -9" bold selected
