tests/snapshots/bundled_review_files__a-nested-tree.snap
---
source: tests/bundled_review_files.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=false
  text "src/" muted bold ellipsize
  line
    text "    " bold selected
    text "M" bold selected
    text " b.rs  " bold selected
    text "+3" bold selected
    text " -1" bold selected
  text "  ui/" muted bold ellipsize
  line
    text "      "
    text "A" diff_added
    text " a.rs  "
    text "+12" diff_added
    text " -0" diff_removed
  line
    text "      "
    text "D" diff_removed
    text " z.rs  "
    text "+0" diff_added
    text " -40" diff_removed
  line
    text "  "
    text "R" accent
    text " top.rs  "
    text "+1" diff_added
    text " -1" diff_removed
