tests/snapshots/bundled_review_files__an-unknown-status.snap
---
source: tests/bundled_review_files.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=0 scrollbar=false
  line
    text "  " bold selected
    text "?" bold selected
    text " a.rs  " bold selected
    text "+1" bold selected
    text " -0" bold selected
