tests/snapshots/bundled_review_files__no-changes.snap
---
source: tests/bundled_review_files.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=none scrollbar=false
