tests/snapshots/bundled_review_files__the-cursor-on-a-reviewed-file.snap
---
source: tests/bundled_review_files.rs
expression: "view_tree_record::tree(&native)"
---
list cursor=1 scrollbar=false
  text "docs/" muted bold ellipsize
  line
    text "  ✓ " bold selected
    text "M" bold selected
    text " GUIDE.md  " bold selected
    text "+2" bold selected
    text " -2" bold selected
  line
    text "  ✓ "
    text "M" status_working
    text " OTHER.md  "
    text "+1" diff_added
    text " -0" diff_removed
